classDiagram
    direction TB

    namespace Infrastructure_REST {
        class OrdemServicoResourceImpl {
            +cancelarOrdemServico(ordemServicoId, CancelarOsReqDTO) Response
        }
    }

    namespace Infrastructure_CrossCutting {
        class AuditoriaProxy {
            <<cross-cutting>>
            +envolver(T, Class~T~, RegistrarAuditoriaPort) T
            -interceptar(method, args) Any
        }
    }

    namespace Application_Ports_In {
        class CancelarOrdemServicoUseCase {
            <<interface>>
            +cancelarOrdemServico(ordemServicoId, CancelarOsReqDTO) ResumoOrdemServicoResDTO
        }
    }

    namespace Application_Service {
        class CancelarOrdemServicoService {
            +cancelarOrdemServico(ordemServicoId, CancelarOsReqDTO) ResumoOrdemServicoResDTO
            -validarClienteTitular(os, solicitanteId)
            -validarStatusPermitido(os)
            -devolverInsumosSeAguardandoAprovacao(os)
        }
    }

    namespace Application_Ports_Out {
        class JwtPort {
            <<interface>>
            +getUsuarioId() UsuarioId
        }
        class OrdemServicoRepositoryPort {
            <<interface>>
            +buscarPorId(OrdemServicoId) OrdemServico?
            +atualizar(OrdemServico) OrdemServico
        }
        class InsumoRepositoryPort {
            <<interface>>
            +buscarPorId(InsumoId) Insumo?
            +atualizar(Insumo) Insumo
        }
        class RegistrarAuditoriaPort {
            <<interface>>
            +registrar(TipoEntidade, TipoEventoAuditoria, String, Any?, Any?)
        }
    }

    namespace Domain {
        class OrdemServico {
            <<aggregate root>>
            +clienteId UsuarioId
            +status StatusOrdemServico
            +obterStatus() StatusOrdemServicoEnum
            +listarInsumos() List~InsumoId~
            +cancelar(motivo)
        }
        class Insumo {
            +adicionarAoEstoque(quantidade)
        }
    }

    namespace Infrastructure_Adapters {
        class JwtAdapter {
            +getUsuarioId() UsuarioId
        }
        class OrdemServicoRepositoryAdapter {
            +buscarPorId(OrdemServicoId) OrdemServico?
            +atualizar(OrdemServico) OrdemServico
        }
        class InsumoRepositoryAdapter {
            +buscarPorId(InsumoId) Insumo?
            +atualizar(Insumo) Insumo
        }
        class AuditoriaRepositoryAdapter {
            +registrar(TipoEntidade, TipoEventoAuditoria, String, Any?, Any?)
        }
    }

    OrdemServicoResourceImpl --> CancelarOrdemServicoUseCase : invoca

    AuditoriaProxy ..|> CancelarOrdemServicoUseCase : wrap (Java Proxy)
    AuditoriaProxy --> CancelarOrdemServicoService : delega execução
    AuditoriaProxy --> RegistrarAuditoriaPort : notifica após @Auditavel

    CancelarOrdemServicoService ..|> CancelarOrdemServicoUseCase : implementa
    CancelarOrdemServicoService --> JwtPort : getUsuarioId()
    CancelarOrdemServicoService --> OrdemServicoRepositoryPort : buscarPorId() atualizar()
    CancelarOrdemServicoService --> InsumoRepositoryPort : buscarPorId() atualizar()
    CancelarOrdemServicoService --> OrdemServico : listarInsumos() cancelar()
    CancelarOrdemServicoService --> Insumo : adicionarAoEstoque()

    JwtAdapter ..|> JwtPort : implementa
    OrdemServicoRepositoryAdapter ..|> OrdemServicoRepositoryPort : implementa
    InsumoRepositoryAdapter ..|> InsumoRepositoryPort : implementa
    AuditoriaRepositoryAdapter ..|> RegistrarAuditoriaPort : implementa
